ns-deploy-lb.yml
---
# namespace: 별도의 프로젝트 공간
apiVersion: v1
kind: Namespace
metadata:
  name: samsung


---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: samsung-deploy
  namespace: samsung
  labels:   # 여러개의 라벨 추가 가능
    app: web
    part: cloud
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web         #Deploy의 label이 아니라 pod의 라벨을 지정한다.
  template:            #이 부분부터 pod에 대한 정의를 한다
    metadata:          #name을 별도 지정할 필요 없음, automatically, deploy이름-rs이름-pod이름
      labels:
        app: web
    spec:              #pod 내에 들어갈 것들 => 컨테이너
      containers:
        - name: web
          image: nginx
          ports:
          - containerPort: 80

---
# service: loadbalancer
apiVersion: v1
kind: Service
metadata:
  name: samsung-lb
  namespace: samsung
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    #nodeport 지정하지 않는 이유: 여러서비스가 노드 포트를 공유하므로 겹치지 않도록 랜덤하게
