svc_deploy_blog.yml
---
# svc-blog
apiVersion: v1
kind: Service
metadata:
  name: svc-blog      #ingress-rule에 있는 service이름과 같아야 함
spec:
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
# type지정은 안 해도 됨. default가 cluster-ip 이므로

---
# deploy-blog
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog     #app: blog을 붙이고있는 pod에게 보낼 것
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: chaewon0720/portal:blog
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
