svc_deploy_etc.yml
# svc-etc > cluster-ip(default)
apiVersion: v1
kind: Service
metadata:
  name: svc-etc
spec:
  selector:
    app: etc
  ports:
  - port: 80
    targetPort: 80
---
# deploy-etc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etc
  template:
    metadata:
      labels:
        app: etc
    spec:
      containers:
      - name: etc
        image: chaewon0720/portal:etc
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
