ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: www.test.com      #이것에 www.test.com을 쓰면 www.test.com/으로 접속가능. (작성하지 않을 경우 http://[ip]/로 접속)
    http:
      paths:
      - pathType: Prefix
        path: /shop(/|$)(.*)
        backend:
          service:
            name: svc-shop
            port: 
              number: 80
      - pathType: Prefix
        path: /blog(/|$)(.*)
        backend:
          service:
            name: svc-blog
            port: 
              number: 80
      - pathType: Prefix
        path: /(/|$)(.*)
        backend:
          service:
            name: svc-main
            port: 
              number: 80
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: svc-etc
            port: 
              number: 80
